@@ -1343,10 +1343,13 @@ class EditPage {
 		if ( $this->section == 'new' ) {
 			$commentsubject = '';
 			if ( !$wgRequest->getBool( 'nosummary' ) ) {
+				# Add an ID if 'missingsummary' is triggered to allow styling of the summary line
+				$summaryMissedID = $this->missingSummary ? ' mw-summarymissed' : '';
+
 				$commentsubject =
 					Xml::tags( 'label', array( 'for' => 'wpSummary' ), $subject );
 				$commentsubject =
-					Xml::tags( 'span', array( 'id' => 'wpSummaryLabel' ), $commentsubject );
+					Xml::tags( 'span', array( 'id' => "wpSummaryLabel$summaryMissedID" ), $commentsubject );
 				$commentsubject .= '&nbsp;';
 				$commentsubject .= Xml::input( 'wpSummary',
 									60,
@@ -1365,10 +1368,12 @@ class EditPage {
 		} else {
 			$commentsubject = '';
 
+			# Add an ID if 'missingsummary' is triggered to allow styling of the summary line
+			$summaryMissedID = $this->missingSummary ? ' mw-summarymissed' : '';
+
 			$editsummary = Xml::tags( 'label', array( 'for' => 'wpSummary' ), $summary );
-			$editsummary =
-				Xml::tags( 'span', array( 'id' => 'wpSummaryLabel' ), $editsummary ) . ' ';
-				
+			$editsummary = Xml::tags( 'span', array( 'id' => "wpSummaryLabel$summaryMissedID" ), $editsummary ) . ' ';
+
 			$editsummary .= Xml::input( 'wpSummary',
 				60,
 				$summarytext,
@@ -1377,11 +1382,11 @@ class EditPage {
 					'maxlength' => '200',
 					'tabindex' => '1'
 				) );
-			
+
 			// No idea where this is closed.
 			$editsummary = Xml::openElement( 'div', array( 'class' => 'editOptions' ) )
 							. $editsummary . '<br/>';
-				
+
 			$summarypreview = '';
 			if ( $summarytext && $this->preview ) {
 				$summarypreview =
