@@ -115,7 +115,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17585) Hide legend on Special:Specialpages from non-privileged users
 * (bug 15876) Users with 'reset-passwords' right can change the passwords of
   other users.
-
+* Add an ID if 'missingsummary' is triggered to allow styling of the summary
+  line
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
 * (bug 17000) Special:RevisionDelete now checks if the database is locked
